@@ -16,10 +16,11 @@ class Roda
     # to wrap template blocks with arbitrary output and then inject the
     # wrapped output into the template.
     #
-    # If the output buffer object responds to +capture+ (e.g. when
-    # +erubi/capture_block+ is being used as the template engine),
-    # this will call +capture+ on the output buffer object, instead
-    # of setting the output buffer object temporarily to a new object.
+    # If the output buffer object responds to +capture+ and is not
+    # an instance of String (e.g. when +erubi/capture_block+ is being
+    # used as the template engine), this will call +capture+ on the
+    # output buffer object, instead of setting the output buffer object
+    # temporarily to a new object.
     module CaptureERB
       def self.load_dependencies(app)
         app.plugin :render
@@ -34,7 +35,7 @@ class Roda
           outvar = render_opts[:template_opts][:outvar]
           buf_was = instance_variable_get(outvar)
 
-          if buf_was.respond_to?(:capture)
+          if buf_was.respond_to?(:capture) && !buf_was.instance_of?(String)
             buf_was.capture(&block)
           else
             begin
