@@ -1,3 +1,7 @@
+= master
+
+* Make capture_erb plugin not break if String#capture is defined (jeremyevans)
+
 = 3.84.0 (2024-09-12)
 
 * Add hsts plugin for setting Strict-Transport-Security header (jeremyevans)
